trunk/Archive2/83/4254520bd689d9/output
main.cpp: In function 'int main()':
main.cpp:24:5: error: static assertion failed: fail
     static_assert(has_hello<nope>::value, "fail");
     ^
